centered etch-a-sketch and updated README.md

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div class = "center">
+      <button id="reset">Reset</button>
+    </div>
     <div class="container">
     </div>
-    <button id="reset">Reset</button>
     <script src="script.js"></script>
   </body>
 </html>
